@@ -1,3 +1,9 @@
+2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* Makefile.am (default_application_properties_capplet_SOURCES):
+	Added header files, including missing defaults.h
+	(EXTRA_DIST): Removed header files
+
 2001-07-16  Chema Celorio  <chema@celorio.com>
 
 	* default-application-properties.c (possible_editors): is gedit not gEdit
